# aib-joy-void-joy-bot

./: .env  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  CHANGELOG.md  DESIGN.md  PLAN.md  README.md  pyproject.toml  trace
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/commands/: add-command.md  commit.md  feedback-loop.md  rebase.md  update-docs.md
.claude/scripts/: aggregate_metrics.py  calibration_report.py  check_forecast_status.py  check_resolved.py  debug.py  feedback_collect.py  module_info.py  new_worktree.py
.githooks/: pre-commit  pre-push
.github/workflows/: run_bot_on_metaculus_cup.yaml  run_bot_on_tournament.yaml  test_bot.yaml
forecaster/: __init__.py  agent.py  cli.py  models.py  prompts.py
notes/: regression_suite.json  scores.csv
notes/feedback_loop/: 20260202_211916_metrics.json  20260202_212213_metrics.json  20260202_212500_analysis.md  20260202_220000_deep_analysis.md  20260202_222425_metrics.json  20260202_222702_metrics.json  20260202_222750_analysis.md  20260203_152232_metrics.json  20260203_220500_analysis.md  20260203_220504_metrics.json  20260203_231303_metrics.json  20260203_231500_analysis.md  20260203_233000_analysis.md  20260203_233716_metrics.json  20260203_234155_metrics.json  20260203_234500_analysis.md  20260203_235000_analysis.md  20260203_meta_analysis.md  20260204_004133_metrics.json  20260204_010000_analysis.md  20260204_165709_metrics.json  20260204_170000_analysis.md  20260329_analysis.md  20260415_060059_calibration_analysis.json  analyzed.json  audit_20260329_7posts.md  last_run.json
notes/logs/: 41540_20260209_122504.md  41540_20260209_123330.md  41840_20260203_080000.md  41842_20260204_023526.md  41844_20260205_195106.md  41848_20260207_111153.md  41849_20260207_164355.md  41851_20260208_074127.md  41852_20260209_063317.md  41895_20260204_164427.md  41973_20260202_201605.md  41974_20260202_204105.md  41979_20260202_230936.md  41980_20260202_230552.md  41982_20260203_024350.md  41989_20260203_141353.md  41995_20260204_083045.md  41996_20260204_124125.md  42000_20260205_003944.md  42002_20260205_012508.md  42003_20260205_014736.md  42005_20260205_105429.md  42006_20260205_171938.md  42007_20260205_182449.md  42008_20260205_182228.md  42009_20260205_192820.md  42028_20260206_165002.md  42038_20260208_220521.md  42039_20260209_071447.md  42077_20260209_044916.md
notes/meta/: 20260202_083000_q138_tesla_q1_deliveries.md  20260202_120000_luigi_mangione_trends.md  20260202_120000_q36597_mounjaro_q1_2026_revenue.md  20260202_120000_q36839_hy_index.md  20260202_120000_q41976_euro_hy_oas.md  20260202_140000_bac_price_forecast.md  20260202_143000_3mo_treasury_yield.md  20260202_143000_meta_starmer_cp.md  20260202_143000_q37113_broad_dollar_index.md  20260202_143000_q41604_sinners_oscars.md  20260202_143000_q41955_eu_age_verification_cp.md  20260202_143000_q_aapl_price_feb15.md  20260202_143000_q_em_hy_spread_forecast.md  20260202_143000_rpontsyd_forecast.md  20260202_150000_5yr_treasury_yield.md  20260202_153000_brent_crude_feb13.md  20260202_170000_q41979_cp_iran_attack.md  20260202_180000_q41981_nasdaq100_feb12.md  20260202_180000_q_wday_stock_price.md  20260202_190000_q41910_namibia_inflation_mar26.md  20260203_143000_q41981_6mo_treasury_yield.md  (+13 more)
scripts/: inspect_api.py
src/aib/: __init__.py  (+7 more)
tests/: __init__.py  conftest.py
(+6629 files in other folders)
