[project]
name = "aib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "asknews>=0.8.0",
    "claude-agent-sdk>=0.1.26",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scipy>=1.17.0",
    "sh>=2.2.2",
    "tenacity>=9.1.2",
    "typer>=0.21.1",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.14.14"]

[project.scripts]
forecast = "aib.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
