[project]
name = "aib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "asknews>=0.8.0",
    "claude-agent-sdk>=0.1.26",
    "docker>=7.1.0",
    "fredapi>=0.5.2",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytrends>=4.9.2",
    "scipy>=1.17.0",
    "sh>=2.2.2",
    "tenacity>=9.1.2",
    "typer>=0.21.1",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[project.scripts]
forecast = "aib.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: mark test as integration test (requires API keys)",
]
