[project]
name = "aib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "arxiv>=2.4.0",
    "asyncpraw>=7.8.1",
    "census>=0.8.25",
    "claude-agent-sdk>=0.1.26",
    "click>=8.3.1",
    "cryptography>=46.0.7",
    "docker>=7.1.0",
    "fredapi>=0.5.2",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.1",
    "openmeteo-requests>=1.7.5",
    "playwright>=1.58.0",
    "plotext>=5.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytrends>=4.9.2",
    "scipy>=1.17.0",
    "sh>=2.2.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.3",
    "trafilatura>=2.0.0",
    "typer>=0.21.1",
    "us>=3.2.0",
    "wbgapi>=1.0.12",
    "yfinance>=1.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[project.scripts]
forecast = "aib.cli:app"
lup-devtools = "aib.devtools.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src", "tests"]
extraPaths = [".claude/plugins/aib/hooks/scripts"]
exclude = ["tmp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["integration: tests requiring external services (Docker, APIs)"]
